--- a/style.css
+++ b/style.css
@@ -7,33 +7,34 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .container {
-  width: 100vw;
-  height: 50vh;
+  width: 100%;
+  height: 50%;
   background-image: url(image/road.avif);
+  background-size: contain;
   background-repeat: repeat-x;
   position: relative;
 }
 
-.purinchan img {
-  width: 30vw;
+.container img {
+  width: 25%;
   max-width: 300px;
   height: auto;
   position: absolute;
-  bottom: 15vh;
+  bottom: 20%;
   right: 0;
 }
 
 button {
-  margin-top: 400px;
-  position: absolute;
+  margin-top: 30px;
+  position: relative;
   width: 150px;
   height: 50px;
-
   border-radius: 12px;
   background-color: red;
   color: white;
@@ -52,12 +53,17 @@ audio {
 }
 
 .lyrics {
-  position: absolute;
-  top: 1vh;
-  right: 1vw;
-  width: 20vw;
+  /* position: absolute; */
+  /* top: 1vh; */
+  /* right: 1vw; */
+  /* width: 20vw; */
+  /* max-width: 350px; */
+  /* min-width: 120px; */
   font-size: 9px;
   border: 3px, solid, rgb(138, 96, 64);
   background-color: lightgoldenrodyellow;
   padding: 5px;
+  width: 25%;
+  margin-top: 30px;
+  text-align: center;
 }
